grass (6.4.2-3) unstable; urgency=low

  * Build-Depends on libpng-dev for LibPNG transition.
    (closes: #662361)
  * grass-dev needs to depend on libfreetype6-dev for building addons.
  * Enable GEOS support

 -- M. Hamish Bowman <hamish_b@yahoo.com>  Sun, 16 Jun 2013 14:27:59 +1200

grass (6.4.2-2) unstable; urgency=low

  * Now grass-gui replacing/breaking old grass.
    (closes: #675514)

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 04 Jun 2012 18:14:50 +0200

grass (6.4.2-1) unstable; urgency=low

  [ Hamish Bowman ]
  * Packaged new upstream version.
  * Reorganize binary packages, new: grass-core, grass-gui, grass-dev-doc.
  * Patch g.extension.sh to check for the needed grass-dev package.
  * Remove outdated cruft from debian/fixscripts.sh and debian/rules.
  * Install the full Programmers' Manual.
  * Use system's copy of jquery.js in the Programmers' Manual.
  * libmysqlclient-dev replaces libmysqlclient15-dev.
    (closes: #650361)
  * Use xdg-open for GRASS_HTML_BROWSER when available.
    (closes: #615667)
  * Policy bumped to 3.9.3, using metapackages archive section for 'grass'.
  * Fix g.extension.sh test for the grass-dev package.
  * Add patch to fix C++ FTBFS for gcc 4.7.0.
    (closes: #671991)
  * Support for dh_python2, byte-compile .py at postinst.
  * Clean up TODO list.

  [ Francesco Paolo Lovergine ]
  * Moved to use TIFF 4.0.1 instead of the legacy flavor.
  * Moved to use libgdal-dev (introduced in 1.9+) b-d.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Tue, 29 May 2012 17:23:07 +0200

grass (6.4.1-2) unstable; urgency=low

  [ Hamish Bowman ]
  * Desktop icon cleanup.
  * Recommend wx; suggest gs, python-imaging, python-rpy2.
  * Remove more obsolete swig references.
  * grass-dev: further support for building add-ons.

  [ Francesco Paolo Lovergine ]
  * Now reset debian/rules to use wx-config current alternative.
    (closes: #655799)
  * Now added python-support to manage compiled python modules.