@@ -52,7 +52,9 @@ ifneq "$(wildcard /usr/share/misc/config.guess)" ""
 endif
 
 	# Add here commands to configure the package.
-	CFLAGS="$(CFLAGS)" ./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) \
+	CFLAGS="$(CFLAGS)" ./configure \
+                    --host=$(DEB_HOST_GNU_TYPE) \
+                    --build=$(DEB_BUILD_GNU_TYPE) \
                     --prefix=/usr/lib \
                     --sysconfdir=/etc \
                     --sharedstatedir=/var \
